config/manifests/gateway-api-inference-extension/generated.yaml
---
# Source: gateway-api-inference-extension/templates/ext_proc.yaml
apiVersion: v1
kind: Service
metadata:
  name: inference-gateway-ext-proc-release-name
  namespace: default
spec:
  selector:
    app: inference-gateway-ext-proc-release-name
  ports:
    - name: grpc
      protocol: TCP
      port: 9002
      targetPort: 9002
    - name: http-metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
---
# Source: gateway-api-inference-extension/templates/ext_proc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-gateway-ext-proc-release-name
  namespace: default
  labels:
    app: inference-gateway-ext-proc-release-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference-gateway-ext-proc-release-name
  template:
    metadata:
      labels:
        app: inference-gateway-ext-proc-release-name
    spec:
      serviceAccountName: inference-gateway-ext-proc-release-name
      containers:
      - name: inference-gateway-ext-proc
        image: registry-cn-hangzhou.ack.aliyuncs.com/dev/gateway-api-inference-extension/epp:main
        imagePullPolicy: Always
        args:
        - -poolName
        - vllm-llama2-7b-pool
        - -poolNamespace
        - default
        - -v
        - "3"
        - -grpcPort
        - "9002"
        - -grpcHealthPort
        - "9003"
        - -metricsPort
        - "9090"
        ports:
        - name: grpc
          containerPort: 9002
        - name: grpc-health
          containerPort: 9003
        - name: metrics
          containerPort: 9090
        livenessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
---
# Source: gateway-api-inference-extension/templates/traffic_policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: high-connection-route-policy-release-name  # 确保引用有 . 前缀
  namespace: 
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: llm-route-release-name
  circuitBreaker:
    maxConnections: 40000
    maxPendingRequests: 40000
    maxParallelRequests: 40000 
  timeout:
    tcp:
      connectTimeout: 24h
---
# Source: gateway-api-inference-extension/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway-release-name
  namespace: default
spec:
  gatewayClassName: inference-gateway-release-name
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
    - name: llm-gw
      protocol: HTTP
      port: 8081
---
# Source: gateway-api-inference-extension/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: inference-gateway-release-name
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
# Source: gateway-api-inference-extension/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route-release-name
  namespace: default
spec:
  parentRefs:
    - name: inference-gateway-release-name
      sectionName: llm-gw
  rules:
  - backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-release-name
    timeouts:
      request: "24h"
      backendRequest: "24h"
